# DiamondGems

./: .gitignore  AGENTS.md  README.md  pyproject.toml
app/: streamlit_app.py
scripts/: reset_venv.ps1
src/baseball_engine/: __init__.py  run_daily.py
src/diamond_gems/: __init__.py  config.py  constants.py  run_daily.py  validation.py
src/diamond_gems/features/: __init__.py  arsenal.py  baseline_archetypes.py  confidence.py  context.py  new_pitch_detector.py  opponent_context.py  pitch_effectiveness_deltas.py  primary_pitch_quality.py  sequencing.py  stability.py  times_through_order.py  trend_scores.py  usage_deltas.py  velocity_deltas.py
src/diamond_gems/ingest/: __init__.py  statcast_download.py
src/diamond_gems/outputs/: __init__.py  content_ideas.py  excel_export.py  export.py  flags.py
src/diamond_gems/transform/: __init__.py  pitch_events.py  pitch_type_summary.py  pitcher_start_summary.py
tests/: test_arsenal.py  test_baseline_archetypes.py  test_confidence.py  test_config_constants.py  test_content_ideas.py  test_context.py  test_excel_export.py  test_export.py  test_flags.py  test_new_pitch_detector.py  test_opponent_context.py  test_pitch_effectiveness_deltas.py  test_pitch_events.py  test_pitch_type_summary.py  test_pitcher_start_summary.py  test_primary_pitch_quality.py  test_run_daily.py  test_sequencing.py  test_smoke.py  test_stability.py  test_statcast_download.py  test_streamlit_helpers.py  test_times_through_order.py  test_trend_scores.py  test_usage_deltas.py  test_validation.py  test_velocity_deltas.py
